made a few changes related to docker